<resources>
    <string name="app_name">Zadatak4</string>
    <string name="height_text">Enter your height in meters</string>
    <string name="edit_text_weight">meters</string>
    <string name="weight_text">Enter your weight in kilograms</string>
    <string name="edite_text_weight">kilograms</string>
    <string name="button_text">Calculate</string>
    <string name="results_text">Results</string>
    <string name="bmi_description">BMI description</string>
    <string name="underweight_result">If your BMI is less than 18.5, it falls within the underweight range.</string>
    <string name="normal_result"><![CDATA[If your BMI is 18.5 to <25, it falls within the normal.]]></string>
    <string name="overweight_result"><![CDATA[If your BMI is 25.0 to <30, it falls within the overweight range.]]></string>
    <string name="obese_result">If your BMI is 30.0 or higher, it falls within the obese range.</string>
</resources>
