<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#273f87">

    <TextView
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_text"
        android:textColor="@color/white_text"
        android:paddingStart="@dimen/padding_left"
        android:textSize="@dimen/text_size"
        tools:ignore="RtlSymmetry"/>
    <EditText
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:inputType="numberDecimal"
        android:layout_centerInParent="true"
        android:textColor="#2a2a2a"
        android:textAlignment="center"
        android:text="@string/edit_text_weight"
        tools:ignore="LabelFor"/>
    <TextView
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_text"
        android:text="@string/weight_text"
        android:textColor="@color/white_text"
        android:paddingStart="@dimen/padding_left"
        android:textSize="@dimen/text_size"
        tools:ignore="RtlSymmetry"/>
    <EditText
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:inputType="numberDecimal"
        android:layout_centerInParent="true"
        android:textColor="@color/grey_text"
        android:textAlignment="center"
        android:text="@string/edite_text_weight"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_text"
        android:layout_centerInParent="true"
        android:textColor="@color/white_text"
        android:background="@color/button_color"
        android:text="@string/button_text"
        android:fontFamily="sans-serif-condensed" />
    <ImageView
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/image"
        android:layout_width="@dimen/bmi_pic_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:paddingStart="@dimen/padding_left"
        tools:ignore="RtlSymmetry"
        android:src="@drawable/underweight"
        android:onClick="izracunaj"
        android:contentDescription="@string/bmi_description" />
    <ImageView
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/image1"
        android:layout_width="@dimen/bmi_pic_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:paddingStart="@dimen/padding_left"
        tools:ignore="RtlSymmetry"
        android:src="@drawable/normal"
        android:onClick="izracunaj"
        android:contentDescription="@string/bmi_description" />
    <ImageView
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/image2"
        android:layout_width="@dimen/bmi_pic_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:paddingStart="@dimen/padding_left"
        tools:ignore="RtlSymmetry"
        android:src="@drawable/overweight"
        android:onClick="izracunaj"
        android:contentDescription="@string/bmi_description" />

    <ImageView
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/image3"
        android:layout_width="@dimen/bmi_pic_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:paddingStart="@dimen/padding_left"
        tools:ignore="RtlSymmetry"
        android:src="@drawable/obese"
        android:onClick="izracunaj"
        android:contentDescription="@string/bmi_description" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/results"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:layout_toEndOf="@id/image"
        android:text="@string/results_text"
        android:textColor="@color/white_text"
        android:textSize="@dimen/text_size_big"
        android:textAlignment="textEnd"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/results_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toEndOf="@id/image"
        android:text="@string/underweight_result"
        android:textColor="@color/white_text"
        android:textSize="@dimen/text_size"
        android:textAlignment="textEnd"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/results_desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toEndOf="@id/image"
        android:text="@string/normal_result"
        android:textColor="@color/white_text"
        android:textSize="@dimen/text_size"
        android:textAlignment="textEnd"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/results_desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toEndOf="@id/image"
        android:text="@string/overweight_result"
        android:textColor="@color/white_text"
        android:textSize="@dimen/text_size"
        android:textAlignment="textEnd"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/results_desc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toEndOf="@id/image"
        android:text="@string/obese_result"
        android:textColor="@color/white_text"
        android:textSize="@dimen/text_size"
        android:textAlignment="textEnd"/>
</RelativeLayout>